--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-  "clientId": "",
-  "clientSecret":"",
+  "clientId": "1095068590769717418",
+  "clientSecret": "q77wvZ05uwGDvynNcS6ZII9kb0-wkl2u",
   "port": 80
 }
