--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -9,6 +9,14 @@
           ],
           "category": "function",
           "resourceName": "outflednetab609c05"
+        },
+        {
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "category": "function",
+          "resourceName": "AuthDiscordLambda"
         }
       ],
       "providerPlugin": "awscloudformation",
@@ -47,6 +55,12 @@
     }
   },
   "function": {
+    "AuthDiscordLambda": {
+      "build": true,
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
     "outflednetab609c05": {
       "build": true,
       "providerPlugin": "awscloudformation",
@@ -54,6 +68,38 @@
     }
   },
   "parameters": {
+    "AMPLIFY_function_AuthDiscordLambda_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "AuthDiscordLambda"
+        }
+      ]
+    },
+    "AMPLIFY_function_AuthDiscordLambda_pipenv": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "AuthDiscordLambda"
+        }
+      ]
+    },
+    "AMPLIFY_function_AuthDiscordLambda_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "AuthDiscordLambda"
+        }
+      ]
+    },
+    "AMPLIFY_function_AuthDiscordLambda_venv": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "AuthDiscordLambda"
+        }
+      ]
+    },
     "AMPLIFY_function_outflednetab609c05_deploymentBucketName": {
       "usedBy": [
         {
