--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -31,31 +31,7 @@
       "service": "Cognito"
     }
   },
-  "function": {
-    "outflednetab609c05": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    }
-  },
-  "parameters": {
-    "AMPLIFY_function_outflednetab609c05_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "outflednetab609c05"
-        }
-      ]
-    },
-    "AMPLIFY_function_outflednetab609c05_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "outflednetab609c05"
-        }
-      ]
-    }
-  },
+  "function": {},
   "storage": {
     "s3cc69e1a5": {
       "dependsOn": [],
