--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -72,5 +72,11 @@
       ]
     }
   },
-  "storage": {}
+  "storage": {
+    "OutfledLatestAppsBucketResource": {
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "S3"
+    }
+  }
 }
